[DOCUMENTATION] Add stats of builtwith.com statistics tool

--- a/website/index.html
+++ b/website/index.html
@@ -16,8 +16,9 @@
 <h1>T3census - TYPO3 census</h1>
 <h2>about</h2>
 <p>Have you ever wondered how many TYPO3 installations are existing? So did I.
-<a href="http://www.cmscrawler.com/" title="">CMSCrawler</a> claims to have found 273,519 installations,
-<a href="http://www.metagenerator.info/generator-details.html?ggid=4" title="">metagenerator.info</a> claims to have found 41,785 installations.</p>
+<a href="http://www.cmscrawler.com/" title="">CMSCrawler</a> claims to have found 274,252 installations (as of Aug 6, 2013),
+<a href="http://builtwith.com/" title="builtWith">builtWith</a> claims to have found 222,850 installations (as of Aug 6, 2013),
+<a href="http://www.metagenerator.info/generator-details.html?ggid=4" title="">metagenerator.info</a> claims to have found 41,785 installations (as of Aug 6, 2013).</p>
 <p>This is a project to have reliable and provable data. And with some background-knowledge in TYPO3, identification should be done better than just examining meta tags.</p>
 <h2>statistics (work in progress)</h2>
 <table border="1" rules="all">
