[DOCUMENTATION] Update stats

--- a/website/index.html
+++ b/website/index.html
@@ -29,50 +29,50 @@
 	</thead>
 	<tfoot>
 		<tr>
-			<td>Total (as of August 05, 2013)</td>
-			<td>54360</td>
+			<td>Total (as of August 11, 2013)</td>
+			<td>64519</td>
 		</tr>
 	</tfoot>
 	<tbody>
 	<tr>
 		<td>TYPO3 3.6 CMS</td>
-		<td>53</td>
+		<td>66</td>
 	</tr><tr>
 		<td>TYPO3 3.7 CMS</td>
-		<td>182</td>
+		<td>207</td>
 	</tr><tr>
 		<td>TYPO3 3.8 CMS</td>
-		<td>527</td>
+		<td>612</td>
 	</tr><tr>
 		<td>TYPO3 4.0 CMS</td>
-		<td>933</td>
+		<td>1098</td>
 	</tr><tr>
 		<td>TYPO3 4.1 CMS</td>
-		<td>2662</td>
+		<td>3158</td>
 	</tr><tr>
 		<td>TYPO3 4.2 CMS</td>
-		<td>6000</td>
+		<td>7211</td>
 	</tr><tr>
 		<td>TYPO3 4.3 CMS</td>
-		<td>2838</td>
+		<td>3379</td>
 	</tr><tr>
 		<td>TYPO3 4.4 CMS</td>
-		<td>4976</td>
+		<td>6018</td>
 	</tr><tr>
 		<td>TYPO3 4.5 CMS</td>
-		<td>26922</td>
+		<td>31295</td>
 	</tr><tr>
 		<td>TYPO3 4.6 CMS</td>
-		<td>2835</td>
+		<td>3437</td>
 	</tr><tr>
 		<td>TYPO3 4.7 CMS</td>
-		<td>5317</td>
+		<td>6686</td>
 	</tr><tr>
 		<td>TYPO3 6.0 CMS</td>
-		<td>772</td>
+		<td>911</td>
 	</tr><tr>
 		<td>TYPO3 6.1 CMS</td>
-		<td>342</td>
+		<td>440</td>
 	</tr><tr>
 		<td>TYPO3 6.2 CMS</td>
 		<td>1</td>
@@ -99,6 +99,7 @@ When successful, a chain of classification processors tries to find out the TYPO
 <p>Identification is done by examining DOM, response cookies and existance of file resources.</p>
 <h2>history</h2>
 <ul type="disc">
+	<li>Aug 11. 2013 - identified ~65,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Jul 27, 2013 - identified ~36,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Jul 13, 2013 - t3census.info domain registration</li>
 	<li>May 30, 2013 - initial commit to github repository</li>
