--- a/website/index.html
+++ b/website/index.html
@@ -30,50 +30,50 @@
 	</thead>
 	<tfoot>
 		<tr>
-			<td>Total (as of August 11, 2013)</td>
-			<td>64519</td>
+			<td>Total (as of August 14, 2013)</td>
+			<td>75179</td>
 		</tr>
 	</tfoot>
 	<tbody>
 	<tr>
 		<td>TYPO3 3.6 CMS</td>
-		<td>66</td>
+		<td>80</td>
 	</tr><tr>
 		<td>TYPO3 3.7 CMS</td>
-		<td>207</td>
+		<td>247</td>
 	</tr><tr>
 		<td>TYPO3 3.8 CMS</td>
-		<td>612</td>
+		<td>719</td>
 	</tr><tr>
 		<td>TYPO3 4.0 CMS</td>
-		<td>1098</td>
+		<td>1338</td>
 	</tr><tr>
 		<td>TYPO3 4.1 CMS</td>
-		<td>3158</td>
+		<td>3744</td>
 	</tr><tr>
 		<td>TYPO3 4.2 CMS</td>
-		<td>7211</td>
+		<td>8280</td>
 	</tr><tr>
 		<td>TYPO3 4.3 CMS</td>
-		<td>3379</td>
+		<td>3890</td>
 	</tr><tr>
 		<td>TYPO3 4.4 CMS</td>
-		<td>6018</td>
+		<td>7090</td>
 	</tr><tr>
 		<td>TYPO3 4.5 CMS</td>
-		<td>31295</td>
+		<td>35931</td>
 	</tr><tr>
 		<td>TYPO3 4.6 CMS</td>
-		<td>3437</td>
+		<td>4270</td>
 	</tr><tr>
 		<td>TYPO3 4.7 CMS</td>
-		<td>6686</td>
+		<td>7967</td>
 	</tr><tr>
 		<td>TYPO3 6.0 CMS</td>
-		<td>911</td>
+		<td>1082</td>
 	</tr><tr>
 		<td>TYPO3 6.1 CMS</td>
-		<td>440</td>
+		<td>540</td>
 	</tr><tr>
 		<td>TYPO3 6.2 CMS</td>
 		<td>1</td>
@@ -100,6 +100,7 @@ When successful, a chain of classification processors tries to find out the TYPO
 <p>Identification is done by examining DOM, response cookies and existance of file resources.</p>
 <h2>history</h2>
 <ul type="disc">
+	<li>Aug 14. 2013 - identified ~75,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Aug 11. 2013 - identified ~65,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Jul 27, 2013 - identified ~36,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Jul 13, 2013 - t3census.info domain registration</li>
