[DOCUMENTATION] Update stats

--- a/website/index.html
+++ b/website/index.html
@@ -1,25 +1,33 @@
 <html>
 <head>
-<title>T3census :: TYPO3 census</title>
-<script type="text/javascript">
-/* <![CDATA[ */
-    (function() {
-        var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
-        s.type = 'text/javascript';
-        s.async = true;
-        s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto';
-        t.parentNode.insertBefore(s, t);
-    })();
-/* ]]> */</script>
+	<title>T3census :: TYPO3 census</title>
+	<script type="text/javascript">
+		/* <![CDATA[ */
+		(function () {
+			var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
+			s.type = 'text/javascript';
+			s.async = true;
+			s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto';
+			t.parentNode.insertBefore(s, t);
+		})();
+		/* ]]> */</script>
 </head>
 <body>
 <h1>T3census - TYPO3 census</h1>
+
 <h2>about</h2>
+
 <p>Have you ever wondered how many TYPO3 installations are existing? So did I.
-<a href="http://www.cmscrawler.com/" title="">CMSCrawler</a> claims to have found 274,252 installations (as of Aug 6, 2013),
-<a href="http://builtwith.com/" title="builtWith">builtWith</a> claims to have found 222,850 installations (as of Aug 6, 2013),
-<a href="http://www.metagenerator.info/generator-details.html?ggid=4" title="">metagenerator.info</a> claims to have found 41,785 installations (as of Aug 6, 2013).</p>
-<p>This is a project to have reliable and provable data. And with some background-knowledge in TYPO3, identification should be done better than just examining meta tags.</p>
+	<a href="http://www.cmscrawler.com/" title="">CMSCrawler</a> claims to have found 274,252 installations (as of Aug
+	6, 2013),
+	<a href="http://builtwith.com/" title="builtWith">builtWith</a> claims to have found 222,850 installations (as of
+	Aug 6, 2013),
+	<a href="http://www.metagenerator.info/generator-details.html?ggid=4" title="">metagenerator.info</a> claims to have
+	found 41,785 installations (as of Aug 6, 2013).</p>
+
+<p>This is a project to have reliable and provable data. And with some background-knowledge in TYPO3, identification
+	should be done better than just examining meta tags.</p>
+
 <h2>statistics (work in progress)</h2>
 <table border="1" rules="all">
 	<thead>
@@ -29,54 +37,67 @@
 	</tr>
 	</thead>
 	<tfoot>
-		<tr>
-			<td>Total (as of August 14, 2013)</td>
-			<td>75179</td>
-		</tr>
+	<tr>
+		<td>Total (as of August 26, 2013)</td>
+		<td>82875</td>
+	</tr>
 	</tfoot>
 	<tbody>
 	<tr>
 		<td>TYPO3 3.6 CMS</td>
-		<td>80</td>
-	</tr><tr>
+		<td>96</td>
+	</tr>
+	<tr>
 		<td>TYPO3 3.7 CMS</td>
-		<td>247</td>
-	</tr><tr>
+		<td>300</td>
+	</tr>
+	<tr>
 		<td>TYPO3 3.8 CMS</td>
-		<td>719</td>
-	</tr><tr>
+		<td>827</td>
+	</tr>
+	<tr>
 		<td>TYPO3 4.0 CMS</td>
-		<td>1338</td>
-	</tr><tr>
+		<td>1501</td>
+	</tr>
+	<tr>
 		<td>TYPO3 4.1 CMS</td>
-		<td>3744</td>
-	</tr><tr>
+		<td>4259</td>
+	</tr>
+	<tr>
 		<td>TYPO3 4.2 CMS</td>
-		<td>8280</td>
-	</tr><tr>
+		<td>9170</td>
+	</tr>
+	<tr>
 		<td>TYPO3 4.3 CMS</td>
-		<td>3890</td>
-	</tr><tr>
+		<td>4307</td>
+	</tr>
+	<tr>
 		<td>TYPO3 4.4 CMS</td>
-		<td>7090</td>
-	</tr><tr>
+		<td>8036</td>
+	</tr>
+	<tr>
 		<td>TYPO3 4.5 CMS</td>
-		<td>35931</td>
-	</tr><tr>
+		<td>39232</td>
+	</tr>
+	<tr>
 		<td>TYPO3 4.6 CMS</td>
-		<td>4270</td>
-	</tr><tr>
+		<td>4629</td>
+	</tr>
+	<tr>
 		<td>TYPO3 4.7 CMS</td>
-		<td>7967</td>
-	</tr><tr>
+		<td>8720</td>
+	</tr>
+	<tr>
 		<td>TYPO3 6.0 CMS</td>
-		<td>1082</td>
-	</tr><tr>
+		<td>1166</td>
+	</tr>
+	<tr>
 		<td>TYPO3 6.1 CMS</td>
-		<td>540</td>
-	</tr><tr>
+		<td>630</td>
+	</tr>
+	<tr>
 		<td>TYPO3 6.2 CMS</td>
-		<td>1</td>
+		<td>2</td>
 	</tr>
 	</tbody>
 </table>
@@ -86,22 +107,38 @@
 	<img src="https://docs.google.com/spreadsheet/oimg?key=0Artbs8oS4Ip4dFZQbGRLb1NSLUtaNVNhLW94MllRbEE&oid=8&zx=z77pa3hcxbyr">
 	<img src="https://docs.google.com/spreadsheet/oimg?key=0Artbs8oS4Ip4dFZQbGRLb1NSLUtaNVNhLW94MllRbEE&oid=6&zx=t8hhcsq3h63a">
 </p>
+
 <h2>data usage</h2>
-<p>Whenever using the here presented data, please mention the project ("T3census") and provide a link to this website. Thank you!</p>
+
+<p>Whenever using the here presented data, please mention the project ("T3census") and provide a link to this website.
+	Thank you!</p>
+
 <h2>data sources</h2>
-<p>All the consumed source data is publicly available. I neither have access to according data of typo3.org infrastructure, nor have I used such data.</p>
-<p>For a start, twitter API has been used to extract URLs amongst keyword TYPO3. Furthermore Bing API has been used with a search for TYPO3 artefacts. With the discovered hosts,
-<a href="http://en.wikipedia.org/wiki/Classless_Inter-Domain_Routing">CIDRs</a> have been retrieved and are being crawled right now. </p>
+
+<p>All the consumed source data is publicly available. I neither have access to according data of typo3.org
+	infrastructure, nor have I used such data.</p>
+
+<p>For a start, twitter API has been used to extract URLs amongst keyword TYPO3. Furthermore Bing API has been used with
+	a search for TYPO3 artefacts. With the discovered hosts,
+	<a href="http://en.wikipedia.org/wiki/Classless_Inter-Domain_Routing">CIDRs</a> have been retrieved and are being
+	crawled right now. </p>
+
 <h2>infrastructure and technique</h2>
-<p>A central jobserver is used to delegate working units. Clients are connecting to this server asking to process working units (IP lookup, Host identification). Workers are processing the
-units and are returning results.</p>
-<p>Analyzing a host is done in two steps. First, a chain of identification processors decides whether a TYPO3 CMS installation has been found.
-When successful, a chain of classification processors tries to find out the TYPO3 version in use.</p>
+
+<p>A central jobserver is used to delegate working units. Clients are connecting to this server asking to process
+	working units (IP lookup, Host identification). Workers are processing the
+	units and are returning results.</p>
+
+<p>Analyzing a host is done in two steps. First, a chain of identification processors decides whether a TYPO3 CMS
+	installation has been found.
+	When successful, a chain of classification processors tries to find out the TYPO3 version in use.</p>
+
 <p>Identification is done by examining DOM, response cookies and existance of file resources.</p>
+
 <h2>history</h2>
 <ul type="disc">
-	<li>Aug 14. 2013 - identified ~75,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
-	<li>Aug 11. 2013 - identified ~65,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
+	<li>Aug 14, 2013 - identified ~75,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
+	<li>Aug 11, 2013 - identified ~65,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Jul 27, 2013 - identified ~36,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Jul 13, 2013 - t3census.info domain registration</li>
 	<li>May 30, 2013 - initial commit to github repository</li>
@@ -116,12 +153,28 @@ When successful, a chain of classification processors tries to find out the TYPO
 	<li>analyze TYPO3 3rd-party extensions in use</li>
 </ul>
 <h2>contributions</h2>
-<p>Spread the word, do not block useragent "T3census-Crawler/*" amongst your infrastructure, contribute code (project is on <a href="https://github.com/t3sec/t3census" title="t3sec/t3census">Github</a>), reduce number of items on my <a href="http://www.amazon.de/registry/wishlist/P79V8LZAI9GE/">Amazon Wishlist</a> or flattr me <a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://t3census.info/"></a>!
+
+<p>Spread the word, do not block useragent "T3census-Crawler/*" amongst your infrastructure, contribute code (project is
+	on <a href="https://github.com/t3sec/t3census" title="t3sec/t3census">Github</a>), reduce number of items on my <a
+			href="http://www.amazon.de/registry/wishlist/P79V8LZAI9GE/">Amazon Wishlist</a> or flattr me <a
+			class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://t3census.info/"></a>!
+
 <h2>thanks</h2>
-<p>Thanks to <a href="http://internetcensus2012.bitbucket.org/">Internet Census 2012</a> for inspiring me, to Michael Knabe for initial work, to <a href="http://gearman.org/">Gearman</a> for providing a helpful tool, to <a href="http://getcomposer.org/">composer</a> for providing a helpful tool, to Matt Haris for his <a href="https://github.com/themattharris/tmhOAuth" title="tmhOAuth">twitter library</a>, to Jonathan H. Wage for his <a href="https://github.com/jwage/purl" title="Purl">URL manipulation library</a>,  to Twitter for their <a href="https://dev.twitter.com/">API</a> and finally to Microsoft for providing <a href="http://www.bing.com/dev/en-us/dev-center">Bing API</a>.
+
+<p>Thanks to <a href="http://internetcensus2012.bitbucket.org/">Internet Census 2012</a> for inspiring me, to Michael
+	Knabe for initial work, to <a href="http://gearman.org/">Gearman</a> for providing a helpful tool, to <a
+			href="http://getcomposer.org/">composer</a> for providing a helpful tool, to Matt Haris for his <a
+			href="https://github.com/themattharris/tmhOAuth" title="tmhOAuth">twitter library</a>, to Jonathan H. Wage
+	for his <a href="https://github.com/jwage/purl" title="Purl">URL manipulation library</a>, to Twitter for their <a
+			href="https://dev.twitter.com/">API</a> and finally to Microsoft for providing <a
+			href="http://www.bing.com/dev/en-us/dev-center">Bing API</a>.
+
 <h2>contact</h2>
+
 <p><a href="mailto:marcus#exp2013@t3sec.info">Marcus Krause</a></p>
+
 <p>I'm open for suggestions what might be of interest additionally.</p>
+
 <h2>legal notice</h2>
 <pre>% whois t3census.info</pre>
 </body>
