--- a/website/index.html
+++ b/website/index.html
@@ -38,62 +38,62 @@
 	</thead>
 	<tfoot>
 	<tr>
-		<td>Total (as of August 26, 2013)</td>
-		<td>83681</td>
+		<td>Total (as of September 01, 2013)</td>
+		<td>84918</td>
 	</tr>
 	</tfoot>
 	<tbody>
 	<tr>
 		<td>TYPO3 3.6 CMS</td>
-		<td>97</td>
+		<td>98</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.7 CMS</td>
-		<td>303</td>
+		<td>304</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.8 CMS</td>
-		<td>829</td>
+		<td>833</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.0 CMS</td>
-		<td>1508</td>
+		<td>1525</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.1 CMS</td>
-		<td>4273</td>
+		<td>4312</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.2 CMS</td>
-		<td>9223</td>
+		<td>9375</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.3 CMS</td>
-		<td>4333</td>
+		<td>4378</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.4 CMS</td>
-		<td>8131</td>
+		<td>8240</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.5 CMS</td>
-		<td>39687</td>
+		<td>40291</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.6 CMS</td>
-		<td>4672</td>
+		<td>4746</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.7 CMS</td>
-		<td>8806</td>
+		<td>8963</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.0 CMS</td>
-		<td>1178</td>
+		<td>1195</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.1 CMS</td>
-		<td>639</td>
+		<td>656</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.2 CMS</td>
@@ -137,6 +137,7 @@
 
 <h2>history</h2>
 <ul type="disc">
+	<li>Sep 01, 2013 - identified ~85,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Aug 14, 2013 - identified ~75,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Aug 11, 2013 - identified ~65,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Jul 27, 2013 - identified ~36,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
