[DOCUMENTATION] Extend website with further project information

--- a/website/index.html
+++ b/website/index.html
@@ -13,11 +13,12 @@
 		/* ]]> */</script>
 </head>
 <body>
-<h1>T3census - TYPO3 census</h1>
+<h1>T3census - TYPO3 CMS census</h1>
 
 <h2>about</h2>
 
-<p>Have you ever wondered how many TYPO3 installations are existing? So did I.
+<p>This project tries to find all <a href="http://typo3.org/">TYPO3 CMS</a> installations in the internet.</p>
+<p>Have you ever wondered how many TYPO3 CMS installations are existing? So did I.
 	<a href="http://www.cmscrawler.com/" title="">CMSCrawler</a> claims to have found 274,252 installations (as of Aug
 	6, 2013),
 	<a href="http://builtwith.com/" title="builtWith">builtWith</a> claims to have found 222,850 installations (as of
@@ -175,6 +176,8 @@
 <p><a href="mailto:marcus#exp2013@t3sec.info">Marcus Krause</a></p>
 
 <p>I'm open for suggestions what might be of interest additionally.</p>
+
+<p>Please contact me if you do not want your infrastructure to be scanned!</p>
 
 <h2>legal notice</h2>
 <pre>% whois t3census.info</pre>
