[DOCUMENTATION] Update stats

--- a/website/index.html
+++ b/website/index.html
@@ -39,62 +39,62 @@
 	</thead>
 	<tfoot>
 	<tr>
-		<td>Total (as of September 06, 2013)</td>
-		<td>87827</td>
+		<td>Total (as of September 14, 2013)</td>
+		<td>89052</td>
 	</tr>
 	</tfoot>
 	<tbody>
 	<tr>
 		<td>TYPO3 3.6 CMS</td>
-		<td>99</td>
+		<td>100</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.7 CMS</td>
-		<td>321</td>
+		<td>330</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.8 CMS</td>
-		<td>856</td>
+		<td>873</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.0 CMS</td>
-		<td>1564</td>
+		<td>1587</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.1 CMS</td>
-		<td>4388</td>
+		<td>4479</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.2 CMS</td>
-		<td>9650</td>
+		<td>9843</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.3 CMS</td>
-		<td>4544</td>
+		<td>4630</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.4 CMS</td>
-		<td>8480</td>
+		<td>8645</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.5 CMS</td>
-		<td>41612</td>
+		<td>42568</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.6 CMS</td>
-		<td>4834</td>
+		<td>4934</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.7 CMS</td>
-		<td>9497</td>
+		<td>9752</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.0 CMS</td>
-		<td>1260</td>
+		<td>1301</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.1 CMS</td>
-		<td>719</td>
+		<td>773</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.2 CMS</td>
@@ -138,6 +138,8 @@
 
 <h2>history</h2>
 <ul type="disc">
+	<li>Sep 14, 2013 - crawled more than 1‰ of IPv4 address space</li>
+	<li>Sep 14, 2013 - identified ~90,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Sep 01, 2013 - identified ~85,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Aug 14, 2013 - identified ~75,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Aug 11, 2013 - identified ~65,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
@@ -149,7 +151,7 @@
 </ul>
 <h2>roadmap</h2>
 <ul type="circle">
-	<li>get the whole picture - crawl complete internet for TYPO3 CMS installations</li>
+	<li>get the whole picture - crawl complete internet for TYPO3 CMS installations (in progress)</li>
 	<li>classify TYPO3 CMS minor releases (fingerprinting)</li>
 	<li>analyze adoption of new TYPO3 CMS releases (major/minor/bugfix)</li>
 	<li>analyze TYPO3 3rd-party extensions in use</li>
