[Documentation] Add note regarding applications, libraries and services in use

--- a/website/index.html
+++ b/website/index.html
@@ -136,9 +136,28 @@
 
 <p>Identification is done by examining DOM, response cookies and existance of file resources.</p>
 
+
+<h2>applications, libraries and services in use</h2>
+
+<ul type="disc">
+	<li><a href="http://getcomposer.org/">composer</a></li>
+	<li><a href="http://www.gearman.org/">Gearman</a></li>
+	<li><a href="https://zmap.io/">ZMap</a></li>
+	<li><a href="https://github.com/jwage/purl" title="Purl">jwage/purl</a></li>
+	<li><a href="https://github.com/league/geotools" title="geotools">league/geotools</a></li>
+	<li><a href="https://github.com/novutec/WhoisParser" title="WhoisParser">novutec/WhoisParser</a></li>
+	<li><a href="https://github.com/themattharris/tmhOAuth" title="tmhOAuth">themattharris/tmhOAuth</a></li>
+	<li><a href="https://github.com/willdurand/geocoder" title="geocoder">willdurand/geocoder</a></li>
+	<li><a href="http://www.bing.com/dev/en-us/dev-center">Bing API</a></li>
+	<li><a href="http://www.diffbot.com/">Diffbot Text Extraction API</a></li>
+	<li><a href="https://developers.google.com/maps/documentation/geocoding/">Google Geocoding API</a></li>
+	<li><a href="http://developer.yahoo.com/boss/geo/">Yahoo! BOSS Placemaker/Placespotter API</a> (YQL)</li>
+	<li><a href="https://dev.twitter.com/">Twitter API</a></li>
+</ul>
+
 <h2>history</h2>
 <ul type="disc">
-	<li>Sep 14, 2013 - crawled more than 1‰ of IPv4 address space</li>
+	<li>Sep 14, 2013 - crawled more than 1 per-mille of IPv4 address space</li>
 	<li>Sep 14, 2013 - identified ~90,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Sep 01, 2013 - identified ~85,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Aug 14, 2013 - identified ~75,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
@@ -150,7 +169,7 @@
 	<li>May 21, 2013 - initial code contribution to private repository</li>
 </ul>
 <h2>roadmap</h2>
-<ul type="circle">
+<ul type="disc">
 	<li>get the whole picture - crawl complete internet for TYPO3 CMS installations (in progress)</li>
 	<li>classify TYPO3 CMS minor releases (fingerprinting)</li>
 	<li>analyze adoption of new TYPO3 CMS releases (major/minor/bugfix)</li>
@@ -166,12 +185,8 @@
 <h2>thanks</h2>
 
 <p>Thanks to <a href="http://internetcensus2012.bitbucket.org/">Internet Census 2012</a> for inspiring me, to Michael
-	Knabe for initial work, to <a href="http://gearman.org/">Gearman</a> for providing a helpful tool, to <a
-			href="http://getcomposer.org/">composer</a> for providing a helpful tool, to Matt Haris for his <a
-			href="https://github.com/themattharris/tmhOAuth" title="tmhOAuth">twitter library</a>, to Jonathan H. Wage
-	for his <a href="https://github.com/jwage/purl" title="Purl">URL manipulation library</a>, to Twitter for their <a
-			href="https://dev.twitter.com/">API</a> and finally to Microsoft for providing <a
-			href="http://www.bing.com/dev/en-us/dev-center">Bing API</a>.
+	Knabe for initial work.
+
 
 <h2>contact</h2>
 
