[DOCUMENTATION] Update stats

--- a/website/index.html
+++ b/website/index.html
@@ -39,66 +39,66 @@
 	</thead>
 	<tfoot>
 	<tr>
-		<td>Total (as of September 14, 2013)</td>
-		<td>89052</td>
+		<td>Total (as of January 14, 2014)</td>
+		<td>91645</td>
 	</tr>
 	</tfoot>
 	<tbody>
 	<tr>
 		<td>TYPO3 3.6 CMS</td>
-		<td>100</td>
+		<td>101</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.7 CMS</td>
-		<td>330</td>
+		<td>338</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.8 CMS</td>
-		<td>873</td>
+		<td>879</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.0 CMS</td>
-		<td>1587</td>
+		<td>1607</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.1 CMS</td>
-		<td>4479</td>
+		<td>4549</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.2 CMS</td>
-		<td>9843</td>
+		<td>9970</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.3 CMS</td>
-		<td>4630</td>
+		<td>4711</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.4 CMS</td>
-		<td>8645</td>
+		<td>8758</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.5 CMS</td>
-		<td>42568</td>
+		<td>43447</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.6 CMS</td>
-		<td>4934</td>
+		<td>5004</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.7 CMS</td>
-		<td>9752</td>
+		<td>10022</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.0 CMS</td>
-		<td>1301</td>
+		<td>1347</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.1 CMS</td>
-		<td>773</td>
+		<td>912</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.2 CMS</td>
-		<td>3</td>
+		<td>7</td>
 	</tr>
 	</tbody>
 </table>
@@ -157,6 +157,7 @@
 
 <h2>history</h2>
 <ul type="disc">
+	<li>Jan 14, 2014 - crawled 0.74% of IPv4 address space</li>
 	<li>Sep 14, 2013 - crawled more than 1 per-mille of IPv4 address space</li>
 	<li>Sep 14, 2013 - identified ~90,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Sep 01, 2013 - identified ~85,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
