[DOCUMENTATION] Update stats

--- a/website/index.html
+++ b/website/index.html
@@ -40,65 +40,65 @@
 	<tfoot>
 	<tr>
 		<td>Total (as of January 18, 2014)</td>
-		<td>91947</td>
+		<td>100064</td>
 	</tr>
 	</tfoot>
 	<tbody>
 	<tr>
 		<td>TYPO3 3.6 CMS</td>
-		<td>103</td>
+		<td>118</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.7 CMS</td>
-		<td>338</td>
+		<td>372</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.8 CMS</td>
-		<td>880</td>
+		<td>973</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.0 CMS</td>
-		<td>1619</td>
+		<td>1718</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.1 CMS</td>
-		<td>4564</td>
+		<td>4938</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.2 CMS</td>
-		<td>10002</td>
+		<td>10884</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.3 CMS</td>
-		<td>4728</td>
+		<td>5075</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.4 CMS</td>
-		<td>8776</td>
+		<td>9655</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.5 CMS</td>
-		<td>43589</td>
+		<td>47340</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.6 CMS</td>
-		<td>5012</td>
+		<td>5294</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.7 CMS</td>
-		<td>10051</td>
+		<td>10968</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.0 CMS</td>
-		<td>1353</td>
+		<td>1523</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.1 CMS</td>
-		<td>925</td>
+		<td>1193</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.2 CMS</td>
-		<td>7</td>
+		<td>13</td>
 	</tr>
 	</tbody>
 </table>
@@ -157,6 +157,7 @@
 
 <h2>history</h2>
 <ul type="disc">
+	<li>Jan 30, 2014 - identified ~100,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Jan 14, 2014 - crawled 0.74% of IPv4 address space</li>
 	<li>Sep 14, 2013 - crawled more than 1 per-mille of IPv4 address space</li>
 	<li>Sep 14, 2013 - identified ~90,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
@@ -186,7 +187,7 @@
 <h2>thanks</h2>
 
 <p>Thanks to <a href="http://internetcensus2012.bitbucket.org/">Internet Census 2012</a> for inspiring me, to Michael
-	Knabe for initial work.
+	Knabe for initial work and thanks to AOE media GmbH for providing a huge list of domain records.
 
 
 <h2>contact</h2>
