[DOCUMENTATION] Update stats

--- a/website/index.html
+++ b/website/index.html
@@ -19,12 +19,11 @@
 
 <p>This project tries to find all <a href="http://typo3.org/">TYPO3 CMS</a> installations in the internet.</p>
 <p>Have you ever wondered how many TYPO3 CMS installations are existing? So did I.
-	<a href="http://www.cmscrawler.com/" title="">CMSCrawler</a> claims to have found 274,252 installations (as of Aug
-	6, 2013),
-	<a href="http://builtwith.com/" title="builtWith">builtWith</a> claims to have found 222,850 installations (as of
-	Aug 6, 2013),
+	<a href="http://www.cmscrawler.com/tool/TYPO3" title="">CMSCrawler</a> claims to have found 313,364 installations (as of Jan 31, 2014),
+	<a href="https://trends.builtwith.com/cms/TYPO3-Open-Source-CMS" title="builtWith">builtWith</a> claims to have found 365,295 installations (as of
+	Jan 31, 2014),
 	<a href="http://www.metagenerator.info/generator-details.html?ggid=4" title="">metagenerator.info</a> claims to have
-	found 41,785 installations (as of Aug 6, 2013).</p>
+	found 30,409 installations (as of Jan 31, 2014).</p>
 
 <p>This is a project to have reliable and provable data. And with some background-knowledge in TYPO3, identification
 	should be done better than just examining meta tags.</p>
@@ -39,66 +38,66 @@
 	</thead>
 	<tfoot>
 	<tr>
-		<td>Total (as of January 30, 2014)</td>
+		<td>Total (as of February 11, 2014)</td>
 		<td>100064</td>
 	</tr>
 	</tfoot>
 	<tbody>
 	<tr>
 		<td>TYPO3 3.6 CMS</td>
-		<td>118</td>
+		<td>133</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.7 CMS</td>
-		<td>372</td>
+		<td>413</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.8 CMS</td>
-		<td>973</td>
+		<td>1086</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.0 CMS</td>
-		<td>1718</td>
+		<td>1969</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.1 CMS</td>
-		<td>4938</td>
+		<td>5500</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.2 CMS</td>
-		<td>10884</td>
+		<td>12001</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.3 CMS</td>
-		<td>5075</td>
+		<td>5430</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.4 CMS</td>
-		<td>9655</td>
+		<td>10814</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.5 CMS</td>
-		<td>47340</td>
+		<td>53137</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.6 CMS</td>
-		<td>5294</td>
+		<td>5799</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.7 CMS</td>
-		<td>10968</td>
+		<td>12620</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.0 CMS</td>
-		<td>1523</td>
+		<td>1729</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.1 CMS</td>
-		<td>1193</td>
+		<td>1738</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.2 CMS</td>
-		<td>13</td>
+		<td>43</td>
 	</tr>
 	</tbody>
 </table>
