[DOCUMENTATION] Update stats

--- a/website/index.html
+++ b/website/index.html
@@ -38,66 +38,66 @@
 	</thead>
 	<tfoot>
 	<tr>
-		<td>Total (as of March 19, 2014)</td>
-		<td>150648</td>
+		<td>Total (as of March 23, 2014)</td>
+		<td>156638</td>
 	</tr>
 	</tfoot>
 	<tbody>
 	<tr>
 		<td>TYPO3 3.6 CMS</td>
-		<td>181</td>
+		<td>189</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.7 CMS</td>
-		<td>614</td>
+		<td>650</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.8 CMS</td>
-		<td>1450</td>
+		<td>1496</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.0 CMS</td>
-		<td>2823</td>
+		<td>2924</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.1 CMS</td>
-		<td>6801</td>
+		<td>7042</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.2 CMS</td>
-		<td>15041</td>
+		<td>15569</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.3 CMS</td>
-		<td>6973</td>
+		<td>7200</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.4 CMS</td>
-		<td>13805</td>
+		<td>14202</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.5 CMS</td>
-		<td>70895</td>
+		<td>73761</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.6 CMS</td>
-		<td>7532</td>
+		<td>7782</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.7 CMS</td>
-		<td>17911</td>
+		<td>18718</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.0 CMS</td>
-		<td>2666</td>
+		<td>2832</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.1 CMS</td>
-		<td>3815</td>
+		<td>4128</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.2 CMS</td>
-		<td>141</td>
+		<td>145</td>
 	</tr>
 	</tbody>
 </table>
@@ -156,6 +156,7 @@
 
 <h2>history</h2>
 <ul type="disc">
+	<li>Mar 20, 2014 - identified ~150,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Jan 30, 2014 - identified ~100,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Jan 14, 2014 - crawled 0.74% of IPv4 address space</li>
 	<li>Sep 14, 2013 - crawled more than 1 per-mille of IPv4 address space</li>
