[DOCUMENTATION] Update stats

--- a/website/index.html
+++ b/website/index.html
@@ -38,74 +38,75 @@
 	</thead>
 	<tfoot>
 	<tr>
-		<td>Total (as of April 06, 2014)</td>
-		<td>201138</td>
+		<td>Total (as of April 07, 2014)</td>
+		<td>208561</td>
 	</tr>
 	</tfoot>
 	<tbody>
 	<tr>
 		<td>TYPO3 3.6 CMS</td>
-		<td>258</td>
+		<td>272</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.7 CMS</td>
-		<td>900</td>
+		<td>972</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.8 CMS</td>
-		<td>1895</td>
+		<td>1964</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.0 CMS</td>
-		<td>3624</td>
+		<td>3763</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.1 CMS</td>
-		<td>8795</td>
+		<td>9098</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.2 CMS</td>
-		<td>19751</td>
+		<td>20442</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.3 CMS</td>
-		<td>8953</td>
+		<td>9246</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.4 CMS</td>
-		<td>17998</td>
+		<td>18568</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.5 CMS</td>
-		<td>93951</td>
+		<td>97187</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.6 CMS</td>
-		<td>9557</td>
+		<td>9841</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.7 CMS</td>
-		<td>24807</td>
+		<td>25836</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.0 CMS</td>
-		<td>3840</td>
+		<td>4032</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.1 CMS</td>
-		<td>6547</td>
+		<td>7041</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.2 CMS</td>
-		<td>262</td>
+		<td>299</td>
 	</tr>
 	</tbody>
 </table>
 <p>
 	<img src="https://docs.google.com/spreadsheet/oimg?key=0Artbs8oS4Ip4dFZQbGRLb1NSLUtaNVNhLW94MllRbEE&oid=2&zx=dqygzq8he41b">
 	<img src="https://docs.google.com/spreadsheet/oimg?key=0Artbs8oS4Ip4dFZQbGRLb1NSLUtaNVNhLW94MllRbEE&oid=4&zx=lrez8mgjcdou">
-	<img src="https://docs.google.com/spreadsheet/oimg?key=0Artbs8oS4Ip4dFZQbGRLb1NSLUtaNVNhLW94MllRbEE&oid=8&zx=z77pa3hcxbyr">
+	<img src="https://docs.google.com/spreadsheet/oimg?key=0Artbs8oS4Ip4dFZQbGRLb1NSLUtaNVNhLW94MllRbEE&oid=8&zx=foaevtj4u5rz">
 	<img src="https://docs.google.com/spreadsheet/oimg?key=0Artbs8oS4Ip4dFZQbGRLb1NSLUtaNVNhLW94MllRbEE&oid=6&zx=t8hhcsq3h63a">
+	<img src="https://docs.google.com/spreadsheet/oimg?key=0Artbs8oS4Ip4dFZQbGRLb1NSLUtaNVNhLW94MllRbEE&oid=10&zx=n2w5k4ftgxlt">
 </p>
 
 <h2>data usage</h2>
@@ -156,6 +157,7 @@
 
 <h2>history</h2>
 <ul type="disc">
+	<li>Apr 01, 2014 - identified ~200,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Mar 20, 2014 - identified ~150,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Jan 30, 2014 - identified ~100,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Jan 14, 2014 - crawled 0.74% of IPv4 address space</li>
