[DOCUMENTATION] Update stats

--- a/website/index.html
+++ b/website/index.html
@@ -38,66 +38,66 @@
 	</thead>
 	<tfoot>
 	<tr>
-		<td>Total (as of May 03, 2014)</td>
-		<td>270,078</td>
+		<td>Total (as of May 11, 2014)</td>
+		<td>301,637</td>
 	</tr>
 	</tfoot>
 	<tbody>
 	<tr>
 		<td>TYPO3 3.6 CMS</td>
-		<td>388</td>
+		<td>449</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.7 CMS</td>
-		<td>1,402</td>
+		<td>1,595</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.8 CMS</td>
-		<td>2,498</td>
+		<td>2,747</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.0 CMS</td>
-		<td>4,622</td>
+		<td>5,120</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.1 CMS</td>
-		<td>11,504</td>
+		<td>12,584</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.2 CMS</td>
-		<td>25,680</td>
+		<td>28,102</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.3 CMS</td>
-		<td>11,748</td>
+		<td>12,864</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.4 CMS</td>
-		<td>23,558</td>
+		<td>25,918</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.5 CMS</td>
-		<td>125,594</td>
+		<td>138,954</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.6 CMS</td>
-		<td>12,661</td>
+		<td>13,897</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.7 CMS</td>
-		<td>34,741</td>
+		<td>38,949</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.0 CMS</td>
-		<td>5,385</td>
+		<td>5,938</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.1 CMS</td>
-		<td>11,286</td>
+		<td>13,139</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.2 CMS</td>
-		<td>1,011</td>
+		<td>1,381</td>
 	</tr>
 	</tbody>
 </table>
@@ -157,6 +157,7 @@
 
 <h2>history</h2>
 <ul type="disc">
+	<li>May 11, 2014 - identified ~300,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Apr 01, 2014 - identified ~200,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Mar 20, 2014 - identified ~150,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Jan 30, 2014 - identified ~100,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
