[DOCUMENTATION] Update stats

--- a/website/index.html
+++ b/website/index.html
@@ -34,70 +34,86 @@
 	<tr>
 		<th>TYPO3 CMS version</th>
 		<th>number of installations</th>
+		<th>percentage</th>
 	</tr>
 	</thead>
 	<tfoot>
 	<tr>
-		<td>Total (as of May 11, 2014)</td>
-		<td>301,637</td>
+		<td>Total (as of November 16, 2014)</td>
+		<td>307,375</td>
+		<td>100.00%</td>
 	</tr>
 	</tfoot>
 	<tbody>
 	<tr>
 		<td>TYPO3 3.6 CMS</td>
 		<td>449</td>
+		<td>0.15%</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.7 CMS</td>
-		<td>1,595</td>
+		<td>1,566</td>
+		<td>0.51%</td>
 	</tr>
 	<tr>
 		<td>TYPO3 3.8 CMS</td>
-		<td>2,747</td>
+		<td>2,675</td>
+		<td>0.87%</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.0 CMS</td>
-		<td>5,120</td>
+		<td>4,813</td>
+		<td>1.57%</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.1 CMS</td>
-		<td>12,584</td>
+		<td>11,697</td>
+		<td>3.81</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.2 CMS</td>
-		<td>28,102</td>
+		<td>25,517</td>
+		<td>8.30%</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.3 CMS</td>
-		<td>12,864</td>
+		<td>11138</td>
+		<td>3.62%</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.4 CMS</td>
-		<td>25,918</td>
+		<td>22777</td>
+		<td>7.41%</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.5 CMS</td>
-		<td>138,954</td>
+		<td>138,262</td>
+		<td>44.98%</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.6 CMS</td>
-		<td>13,897</td>
+		<td>11,922</td>
+		<td>3.88%</td>
 	</tr>
 	<tr>
 		<td>TYPO3 4.7 CMS</td>
-		<td>38,949</td>
+		<td>40,078</td>
+		<td>13.04%</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.0 CMS</td>
-		<td>5,938</td>
+		<td>5,514</td>
+		<td>1.79%</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.1 CMS</td>
-		<td>13,139</td>
+		<td>16,173</td>
+		<td>5.26%</td>
 	</tr>
 	<tr>
 		<td>TYPO3 6.2 CMS</td>
-		<td>1,381</td>
+		<td>14,794</td>
+		<td>4.81%</td>
 	</tr>
 	</tbody>
 </table>
