--- a/website/index.html
+++ b/website/index.html
@@ -19,102 +19,107 @@
 
 <p>This project tries to find all <a href="http://typo3.org/">TYPO3 CMS</a> installations in the internet.</p>
 <p>Have you ever wondered how many TYPO3 CMS installations are existing? So did I.
-	<a href="http://www.cmscrawler.com/tool/TYPO3" title="">CMSCrawler</a> claims to have found 341,517 installations (as of May 03, 2014),
-	<a href="https://trends.builtwith.com/cms/TYPO3" title="builtWith">builtWith</a> claims to have found 456,912 installations (as of
-	May 03, 2014),
+	<a href="http://www.cmscrawler.com/tool/TYPO3" title="">CMSCrawler</a> claims to have found 389,920 installations (as of November 19, 2014),
+	<a href="https://trends.builtwith.com/cms/TYPO3" title="builtWith">builtWith</a> claims to have found 433,853 installations (as of
+	November 19, 2014),
 	<a href="http://www.metagenerator.info/generator-details.html?ggid=4" title="">metagenerator.info</a> claims to have
-	found 39,142 installations (as of May 03, 2014).</p>
+	found 52,061 installations (as of November 19, 2014).</p>
 
 <p>This is a project to have reliable and provable data. And with some background-knowledge in TYPO3, identification
 	should be done better than just examining meta tags.</p>
 
 <h2>statistics (work in progress)</h2>
 <table border="1" rules="all">
+	<colgroup>
+		<col></col>
+		<col></col>
+		<col style="text-align: center;"></col>
+	</colgroup>
 	<thead>
-	<tr>
-		<th>TYPO3 CMS version</th>
-		<th>number of installations</th>
-		<th>percentage</th>
-	</tr>
+		<tr>
+			<th>TYPO3 CMS version</th>
+			<th>number of installations</th>
+			<th>percentage</th>
+		</tr>
 	</thead>
 	<tfoot>
-	<tr>
-		<td>Total (as of November 16, 2014)</td>
-		<td>307,375</td>
-		<td>100.00%</td>
-	</tr>
-	</tfoot>
+		<tr>
+			<td>Total (as of November 20, 2014)</td>
+			<td>330,543</td>
+			<td>100.00%</td>
+		</tr>
+		</tfoot>
 	<tbody>
-	<tr>
-		<td>TYPO3 3.6 CMS</td>
-		<td>449</td>
-		<td>0.15%</td>
-	</tr>
-	<tr>
-		<td>TYPO3 3.7 CMS</td>
-		<td>1,566</td>
-		<td>0.51%</td>
-	</tr>
-	<tr>
-		<td>TYPO3 3.8 CMS</td>
-		<td>2,675</td>
-		<td>0.87%</td>
-	</tr>
-	<tr>
-		<td>TYPO3 4.0 CMS</td>
-		<td>4,813</td>
-		<td>1.57%</td>
-	</tr>
-	<tr>
-		<td>TYPO3 4.1 CMS</td>
-		<td>11,697</td>
-		<td>3.81</td>
-	</tr>
-	<tr>
-		<td>TYPO3 4.2 CMS</td>
-		<td>25,517</td>
-		<td>8.30%</td>
-	</tr>
-	<tr>
-		<td>TYPO3 4.3 CMS</td>
-		<td>11138</td>
-		<td>3.62%</td>
-	</tr>
-	<tr>
-		<td>TYPO3 4.4 CMS</td>
-		<td>22777</td>
-		<td>7.41%</td>
-	</tr>
-	<tr>
-		<td>TYPO3 4.5 CMS</td>
-		<td>138,262</td>
-		<td>44.98%</td>
-	</tr>
-	<tr>
-		<td>TYPO3 4.6 CMS</td>
-		<td>11,922</td>
-		<td>3.88%</td>
-	</tr>
-	<tr>
-		<td>TYPO3 4.7 CMS</td>
-		<td>40,078</td>
-		<td>13.04%</td>
-	</tr>
-	<tr>
-		<td>TYPO3 6.0 CMS</td>
-		<td>5,514</td>
-		<td>1.79%</td>
-	</tr>
-	<tr>
-		<td>TYPO3 6.1 CMS</td>
-		<td>16,173</td>
-		<td>5.26%</td>
-	</tr>
-	<tr>
-		<td>TYPO3 6.2 CMS</td>
-		<td>14,794</td>
-		<td>4.81%</td>
-	</tr>
+		<tr>
+			<td>TYPO3 3.6 CMS</td>
+			<td>490</td>
+			<td>0.15%</td>
+		</tr>
+		<tr>
+			<td>TYPO3 3.7 CMS</td>
+			<td>1,713</td>
+			<td>0.52%</td>
+		</tr>
+		<tr>
+			<td>TYPO3 3.8 CMS</td>
+			<td>2,826</td>
+			<td>0.85%</td>
+		</tr>
+		<tr>
+			<td>TYPO3 4.0 CMS</td>
+			<td>5,155</td>
+			<td>1.51%</td>
+		</tr>
+		<tr>
+			<td>TYPO3 4.1 CMS</td>
+			<td>12,492</td>
+			<td>3.78%</td>
+		</tr>
+		<tr>
+			<td>TYPO3 4.2 CMS</td>
+			<td>27,254</td>
+			<td>8.25%</td>
+		</tr>
+		<tr>
+			<td>TYPO3 4.3 CMS</td>
+			<td>11,853</td>
+			<td>3.59%</td>
+		</tr>
+		<tr>
+			<td>TYPO3 4.4 CMS</td>
+			<td>24,355</td>
+			<td>7.37%</td>
+		</tr>
+		<tr>
+			<td>TYPO3 4.5 CMS (<abbr title="long term support">LTS</abbr>)</td>
+			<td>148,015</td>
+			<td>44.78%</td>
+		</tr>
+		<tr>
+			<td>TYPO3 4.6 CMS</td>
+			<td>12,680</td>
+			<td>3.84%</td>
+		</tr>
+		<tr>
+			<td>TYPO3 4.7 CMS</td>
+			<td>43,283</td>
+			<td>13.09%</td>
+		</tr>
+		<tr>
+			<td>TYPO3 6.0 CMS</td>
+			<td>5,930</td>
+			<td>1.79%</td>
+		</tr>
+		<tr>
+			<td>TYPO3 6.1 CMS</td>
+			<td>17,907</td>
+			<td>5.42%</td>
+		</tr>
+		<tr>
+			<td>TYPO3 6.2 CMS (<abbr title="long term support">LTS</abbr>)</td>
+			<td>16,590</td>
+			<td>5.02%</td>
+		</tr>
 	</tbody>
 </table>
 <p>
