--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,12 @@
 <html>
 <head>
 	<title>T3census :: TYPO3 census</title>
+	<meta http-equiv="language" content="english, en">
+	<meta name="author" content="Marcus Krause">
+	<meta name="keywords" content="TYPO3,statistics,census,usage,roadmap,lts,long term support,supported,unsupported,crawler">
+	<meta name="description" content="T3census :: TYPO3 CMS census - A project to discover and classify all TYPO3 CMS installations in the internet.">
+	<meta name="robots" content="index">
+	<meta name="revisit-after" content="14 days">
 	<script type="text/javascript">
 		/* <![CDATA[ */
 		(function () {
@@ -17,7 +23,7 @@
 
 <h2>about</h2>
 
-<p>This project tries to find all <a href="http://typo3.org/">TYPO3 CMS</a> installations in the internet.</p>
+<p>This project tries to discover all <a href="http://typo3.org/">TYPO3 CMS</a> installations in the internet.</p>
 <p>Have you ever wondered how many TYPO3 CMS installations are existing? So did I.
 	<a href="http://www.cmscrawler.com/tool/TYPO3" title="">CMSCrawler</a> claims to have found 389,920 installations (as of November 19, 2014),
 	<a href="https://trends.builtwith.com/cms/TYPO3" title="builtWith">builtWith</a> claims to have found 433,853 installations (as of
@@ -44,81 +50,86 @@
 	</thead>
 	<tfoot>
 		<tr>
-			<td>Total (as of November 22, 2014)</td>
-			<td>344,514</td>
+			<td>Total (as of December 03, 2014)</td>
+			<td>357,445</td>
 			<td>100.00%</td>
 		</tr>
 		</tfoot>
 	<tbody>
 		<tr>
 			<td>TYPO3 3.6 CMS</td>
-			<td>517</td>
+			<td>545</td>
 			<td>0.15%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 3.7 CMS</td>
-			<td>1,838</td>
+			<td>1,884</td>
 			<td>0.53%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 3.8 CMS</td>
-			<td>2,949</td>
-			<td>0.86%</td>
+			<td>3,005</td>
+			<td>0.84%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 4.0 CMS</td>
-			<td>5,343</td>
-			<td>1.45%</td>
+			<td>5,442</td>
+			<td>1.40%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 4.1 CMS</td>
-			<td>12,989</td>
-			<td>3.77%</td>
+			<td>13,343</td>
+			<td>3.73%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 4.2 CMS</td>
-			<td>28,297</td>
-			<td>8.21%</td>
+			<td>28,901</td>
+			<td>8.09%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 4.3 CMS</td>
-			<td>12,354</td>
-			<td>3.59%</td>
+			<td>12,643</td>
+			<td>3.54%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 4.4 CMS</td>
-			<td>25,287</td>
-			<td>7.34%</td>
+			<td>26,121</td>
+			<td>7.31%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 4.5 CMS (<abbr title="long term support">LTS</abbr>)</td>
-			<td>153,896</td>
-			<td>44.67%</td>
+			<td>158,529</td>
+			<td>44.35%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 4.6 CMS</td>
-			<td>13,185</td>
-			<td>3.83%</td>
+			<td>13,489</td>
+			<td>3.77%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 4.7 CMS</td>
-			<td>45,193</td>
-			<td>13.12%</td>
+			<td>46,636</td>
+			<td>13.05%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 6.0 CMS</td>
-			<td>6,136</td>
-			<td>1.78%</td>
+			<td>6,342</td>
+			<td>1.77%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 6.1 CMS</td>
-			<td>18,791</td>
-			<td>5.45%</td>
+			<td>19,931</td>
+			<td>5.58%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 6.2 CMS (<abbr title="long term support">LTS</abbr>)</td>
-			<td>17,739</td>
-			<td>5.15%</td>
+			<td>20,521</td>
+			<td>5.74%</td>
+		</tr>
+		<tr>
+			<td>TYPO3 7.0 CMS</td>
+			<td>113</td>
+			<td>0.03%</td>
 		</tr>
 	</tbody>
 </table>
@@ -178,6 +189,7 @@
 
 <h2>history</h2>
 <ul type="disc">
+	<li>December 03, 2014 - identified ~355,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>May 11, 2014 - identified ~300,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Apr 01, 2014 - identified ~200,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
 	<li>Mar 20, 2014 - identified ~150,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
@@ -203,8 +215,7 @@
 </ul>
 <h2>contributions</h2>
 
-<p>Spread the word, do not block useragent "T3census-Crawler/*" amongst your infrastructure, contribute code (project is
-	on <a href="https://github.com/t3sec/t3census" title="t3sec/t3census">Github</a>), reduce number of items on my <a
+<p>Spread the word, do not block useragent "T3census-Crawler/*" amongst your infrastructure, reduce number of items on my <a
 			href="http://www.amazon.de/registry/wishlist/P79V8LZAI9GE/">Amazon Wishlist</a> or flattr me <a
 			class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://t3census.info/"></a>!
 
