--- a/website/index.html
+++ b/website/index.html
@@ -3,10 +3,11 @@
 	<title>T3census :: TYPO3 census</title>
 	<meta http-equiv="language" content="english, en">
 	<meta name="author" content="Marcus Krause">
-	<meta name="keywords" content="TYPO3,statistics,census,usage,roadmap,lts,long term support,supported,unsupported,crawler">
+	<meta name="keywords" content="TYPO3,statistics,census,usage,roadmap,releases,lts,long term support,supported,unsupported,crawler,adoption">
 	<meta name="description" content="T3census :: TYPO3 CMS census - A project to discover and classify all TYPO3 CMS installations in the internet.">
 	<meta name="robots" content="index">
 	<meta name="revisit-after" content="14 days">
+	<meta name="google-site-verification" content="12NFabKSYcKAZwBQiANMTleqvFNV97_2u0Qr5ByzVxI" />
 	<script type="text/javascript">
 		/* <![CDATA[ */
 		(function () {
@@ -17,6 +18,19 @@
 			t.parentNode.insertBefore(s, t);
 		})();
 		/* ]]> */</script>
+	<style type="text/css">
+		body {
+			font-size: 16px;
+		}
+
+		.small {
+			font-size: 12px; /* 75% of the baseline */
+		}
+
+		.large {
+			font-size: 20px; /* 125% of the baseline */
+		}
+	</style>
 </head>
 <body>
 <h1>T3census - TYPO3 CMS census</h1>
@@ -50,85 +64,85 @@
 	</thead>
 	<tfoot>
 		<tr>
-			<td>Total (as of December 03, 2014)</td>
-			<td>357,445</td>
+			<td>Total (as of December 21, 2014)</td>
+			<td>359,281</td>
 			<td>100.00%</td>
 		</tr>
 		</tfoot>
 	<tbody>
 		<tr>
 			<td>TYPO3 3.6 CMS</td>
-			<td>545</td>
-			<td>0.15%</td>
+			<td>580</td>
+			<td>0.16%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 3.7 CMS</td>
-			<td>1,884</td>
+			<td>1,888</td>
 			<td>0.53%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 3.8 CMS</td>
-			<td>3,005</td>
+			<td>3,033</td>
 			<td>0.84%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 4.0 CMS</td>
-			<td>5,442</td>
-			<td>1.40%</td>
+			<td>5,481</td>
+			<td>1.39%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 4.1 CMS</td>
-			<td>13,343</td>
-			<td>3.73%</td>
+			<td>13,431</td>
+			<td>3.74%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 4.2 CMS</td>
-			<td>28,901</td>
-			<td>8.09%</td>
+			<td>29,105</td>
+			<td>8.10%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 4.3 CMS</td>
-			<td>12,643</td>
+			<td>12,717</td>
 			<td>3.54%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 4.4 CMS</td>
-			<td>26,121</td>
-			<td>7.31%</td>
+			<td>26,231</td>
+			<td>7.30%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 4.5 CMS (<abbr title="long term support">LTS</abbr>)</td>
-			<td>158,529</td>
-			<td>44.35%</td>
+			<td>159,153</td>
+			<td>44.30%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 4.6 CMS</td>
-			<td>13,489</td>
-			<td>3.77%</td>
+			<td>13,583</td>
+			<td>3.78%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 4.7 CMS</td>
-			<td>46,636</td>
-			<td>13.05%</td>
+			<td>46,841</td>
+			<td>13.04%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 6.0 CMS</td>
-			<td>6,342</td>
+			<td>6,369</td>
 			<td>1.77%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 6.1 CMS</td>
-			<td>19,931</td>
-			<td>5.58%</td>
+			<td>20,067</td>
+			<td>5.59%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 6.2 CMS (<abbr title="long term support">LTS</abbr>)</td>
-			<td>20,521</td>
-			<td>5.74%</td>
+			<td>20,677</td>
+			<td>5.76%</td>
 		</tr>
 		<tr>
 			<td>TYPO3 7.0 CMS</td>
-			<td>113</td>
+			<td>125</td>
 			<td>0.03%</td>
 		</tr>
 	</tbody>
