--- a/website/index.html
+++ b/website/index.html
@@ -30,6 +30,12 @@
 		.large {
 			font-size: 20px; /* 125% of the baseline */
 		}
+		.supported {
+			background-color: green;
+		}
+		.eol {
+			background-color: red;
+		}
 	</style>
 </head>
 <body>
@@ -64,86 +70,111 @@
 	</thead>
 	<tfoot>
 		<tr>
-			<td>Total (as of December 21, 2014)</td>
-			<td>359,281</td>
+			<td>Total (as of December 2, 2016)</td>
+			<td>360,355</td>
 			<td>100.00%</td>
 		</tr>
 		</tfoot>
 	<tbody>
-		<tr>
+		<tr class="eol">
 			<td>TYPO3 3.6 CMS</td>
-			<td>580</td>
+			<td>585</td>
 			<td>0.16%</td>
 		</tr>
-		<tr>
+		<tr class="eol">
 			<td>TYPO3 3.7 CMS</td>
-			<td>1,888</td>
-			<td>0.53%</td>
+			<td>1,889</td>
+			<td>0.52%</td>
 		</tr>
-		<tr>
+		<tr class="eol">
 			<td>TYPO3 3.8 CMS</td>
-			<td>3,033</td>
+			<td>3,039</td>
 			<td>0.84%</td>
 		</tr>
-		<tr>
+		<tr class="eol">
 			<td>TYPO3 4.0 CMS</td>
-			<td>5,481</td>
+			<td>5,495</td>
 			<td>1.39%</td>
 		</tr>
-		<tr>
+		<tr class="eol">
 			<td>TYPO3 4.1 CMS</td>
-			<td>13,431</td>
-			<td>3.74%</td>
+			<td>13,450</td>
+			<td>3.73%</td>
 		</tr>
-		<tr>
+		<tr class="eol">
 			<td>TYPO3 4.2 CMS</td>
-			<td>29,105</td>
-			<td>8.10%</td>
+			<td>29,169</td>
+			<td>8.09%</td>
 		</tr>
-		<tr>
+		<tr class="eol">
 			<td>TYPO3 4.3 CMS</td>
-			<td>12,717</td>
-			<td>3.54%</td>
+			<td>12,737</td>
+			<td>3.53%</td>
 		</tr>
-		<tr>
+		<tr class="eol">
 			<td>TYPO3 4.4 CMS</td>
-			<td>26,231</td>
+			<td>26,294</td>
 			<td>7.30%</td>
 		</tr>
-		<tr>
-			<td>TYPO3 4.5 CMS (<abbr title="long term support">LTS</abbr>)</td>
-			<td>159,153</td>
-			<td>44.30%</td>
+		<tr class="eol">
+			<td>TYPO3 4.5 CMS (previously <abbr title="long term support">LTS</abbr>)</td>
+			<td>159,379</td>
+			<td>44.23%</td>
 		</tr>
-		<tr>
+		<tr class="eol">
 			<td>TYPO3 4.6 CMS</td>
-			<td>13,583</td>
+			<td>13,605</td>
 			<td>3.78%</td>
 		</tr>
-		<tr>
+		<tr class="eol">
 			<td>TYPO3 4.7 CMS</td>
-			<td>46,841</td>
-			<td>13.04%</td>
+			<td>46,916</td>
+			<td>13.02%</td>
 		</tr>
-		<tr>
+		<tr class="eol">
 			<td>TYPO3 6.0 CMS</td>
-			<td>6,369</td>
+			<td>6,379</td>
 			<td>1.77%</td>
 		</tr>
-		<tr>
+		<tr class="eol">
 			<td>TYPO3 6.1 CMS</td>
-			<td>20,067</td>
+			<td>20,147</td>
 			<td>5.59%</td>
 		</tr>
-		<tr>
+		<tr class="supported">
 			<td>TYPO3 6.2 CMS (<abbr title="long term support">LTS</abbr>)</td>
-			<td>20,677</td>
-			<td>5.76%</td>
+			<td>21,082</td>
+			<td>5.85%</td>
 		</tr>
-		<tr>
+		<tr class="eol">
 			<td>TYPO3 7.0 CMS</td>
-			<td>125</td>
-			<td>0.03%</td>
+			<td>141</td>
+			<td>0.04%</td>
+		</tr>
+		<tr class="eol">
+			<td>TYPO3 7.1 CMS</td>
+			<td>4</td>
+			<td>0.00%</td>
+		</tr>
+		<tr class="eol">
+			<td>TYPO3 7.2 CMS</td>
+			<td>1</td>
+			<td>0.00%</td>
+		</tr>
+		<tr class="supported">
+			<td>TYPO3 7.6 CMS (<abbr title="long term support">LTS</abbr>)</td>
+			<td>24</td>
+			<td>0.01%</td>
+		</tr>
+		<tr class="eol">
+			<td>TYPO3 8.3 CMS</td>
+			<td>18</td>
+			<td>0.01%</td>
+		</tr>
+		<tr class="supported">
+			<td>TYPO3 8.4 CMS</td>
+			<td>1</td>
+			<td>0.00%</td>
 		</tr>
 	</tbody>
 </table>
