--- a/website/index.html
+++ b/website/index.html
@@ -261,8 +261,7 @@
 <h2>contributions</h2>
 
 <p>Spread the word, do not block useragent "T3census-Crawler/*" amongst your infrastructure, reduce number of items on my <a
-			href="http://www.amazon.de/registry/wishlist/P79V8LZAI9GE/">Amazon Wishlist</a> or flattr me <a
-			class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://t3census.info/"></a>!
+			href="http://www.amazon.de/registry/wishlist/P79V8LZAI9GE/">Amazon Wishlist</a> or flattr me <a href="https://flattr.com/submit/auto?fid=4z3gvx&url=http%3A%2F%2Ft3census.info" target="_blank"><img src="http://button.flattr.com/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0"></a>!
 
 <h2>thanks</h2>
 
