--- a/website/index.html
+++ b/website/index.html
@@ -70,85 +70,85 @@
 	</thead>
 	<tfoot>
 		<tr>
-			<td>Total (as of December 2, 2016)</td>
-			<td>360,355</td>
+			<td>Total (as of December 5, 2016)<br>"oldest" datasample: Jan 27, 2014</td>
+			<td>351,891</td>
 			<td>100.00%</td>
 		</tr>
 		</tfoot>
 	<tbody>
 		<tr class="eol">
 			<td>TYPO3 3.6 CMS</td>
-			<td>585</td>
+			<td>576</td>
 			<td>0.16%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 3.7 CMS</td>
-			<td>1,889</td>
+			<td>1,830</td>
 			<td>0.52%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 3.8 CMS</td>
-			<td>3,039</td>
-			<td>0.84%</td>
+			<td>2,859</td>
+			<td>0.81%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.0 CMS</td>
-			<td>5,495</td>
-			<td>1.39%</td>
+			<td>5,202</td>
+			<td>1.42%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.1 CMS</td>
-			<td>13,450</td>
-			<td>3.73%</td>
+			<td>12,671</td>
+			<td>3.60%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.2 CMS</td>
-			<td>29,169</td>
-			<td>8.09%</td>
+			<td>27,667</td>
+			<td>7.86%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.3 CMS</td>
-			<td>12,737</td>
-			<td>3.53%</td>
+			<td>12,158</td>
+			<td>3.46%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.4 CMS</td>
-			<td>26,294</td>
-			<td>7.30%</td>
+			<td>25,268</td>
+			<td>7.18%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.5 CMS (previously <abbr title="long term support">LTS</abbr>)</td>
-			<td>159,379</td>
-			<td>44.23%</td>
+			<td>155,709</td>
+			<td>44.25%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.6 CMS</td>
-			<td>13,605</td>
+			<td>13,295</td>
 			<td>3.78%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.7 CMS</td>
-			<td>46,916</td>
-			<td>13.02%</td>
+			<td>46,338</td>
+			<td>13.17%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 6.0 CMS</td>
-			<td>6,379</td>
-			<td>1.77%</td>
+			<td>6,273</td>
+			<td>1.78%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 6.1 CMS</td>
-			<td>20,147</td>
-			<td>5.59%</td>
+			<td>20,092</td>
+			<td>5.71%</td>
 		</tr>
 		<tr class="supported">
 			<td>TYPO3 6.2 CMS (<abbr title="long term support">LTS</abbr>)</td>
-			<td>21,082</td>
-			<td>5.85%</td>
+			<td>21,348</td>
+			<td>6.07%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 7.0 CMS</td>
-			<td>141</td>
+			<td>142</td>
 			<td>0.04%</td>
 		</tr>
 		<tr class="eol">
@@ -163,17 +163,17 @@
 		</tr>
 		<tr class="supported">
 			<td>TYPO3 7.6 CMS (<abbr title="long term support">LTS</abbr>)</td>
-			<td>24</td>
-			<td>0.01%</td>
+			<td>232</td>
+			<td>0.07%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 8.3 CMS</td>
-			<td>18</td>
-			<td>0.01%</td>
+			<td>220</td>
+			<td>0.06%</td>
 		</tr>
 		<tr class="supported">
 			<td>TYPO3 8.4 CMS</td>
-			<td>1</td>
+			<td>6</td>
 			<td>0.00%</td>
 		</tr>
 	</tbody>
@@ -234,18 +234,19 @@
 
 <h2>history</h2>
 <ul type="disc">
-	<li>December 03, 2014 - identified ~355,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
-	<li>May 11, 2014 - identified ~300,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
-	<li>Apr 01, 2014 - identified ~200,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
-	<li>Mar 20, 2014 - identified ~150,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
-	<li>Jan 30, 2014 - identified ~100,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
+	<li>Dec 05, 2016 - identified ~350,000 TYPO3 CMS installations ("oldest" datasample: Jan 27, 2014)</li>
+	<li>Dec 03, 2014 - identified ~355,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013)</li>
+	<li>May 11, 2014 - identified ~300,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013)</li>
+	<li>Apr 01, 2014 - identified ~200,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013)</li>
+	<li>Mar 20, 2014 - identified ~150,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013)</li>
+	<li>Jan 30, 2014 - identified ~100,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013)</li>
 	<li>Jan 14, 2014 - crawled 0.74% of IPv4 address space</li>
 	<li>Sep 14, 2013 - crawled more than 1 per-mille of IPv4 address space</li>
-	<li>Sep 14, 2013 - identified ~90,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
-	<li>Sep 01, 2013 - identified ~85,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
-	<li>Aug 14, 2013 - identified ~75,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
-	<li>Aug 11, 2013 - identified ~65,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
-	<li>Jul 27, 2013 - identified ~36,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013")</li>
+	<li>Sep 14, 2013 - identified ~90,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013)</li>
+	<li>Sep 01, 2013 - identified ~85,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013)</li>
+	<li>Aug 14, 2013 - identified ~75,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013)</li>
+	<li>Aug 11, 2013 - identified ~65,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013)</li>
+	<li>Jul 27, 2013 - identified ~36,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013)</li>
 	<li>Jul 13, 2013 - t3census.info domain registration</li>
 	<li>May 30, 2013 - initial commit to github repository</li>
 	<li>May 26, 2013 - published initial stats: 110 identified TYPO3 CMS installations</li>
