[DOCUMENTATION] Update stats

--- a/website/index.html
+++ b/website/index.html
@@ -70,114 +70,130 @@
 	</thead>
 	<tfoot>
 		<tr>
-			<td>Total (as of December 5, 2016)<br>"oldest" datasample: Jan 27, 2014</td>
-			<td>351,891</td>
+			<td>Total (as of December 5, 2016)<br>"oldest" datasample: Jan 7, 2014</td>
+			<td>316,304</td>
 			<td>100.00%</td>
 		</tr>
 		</tfoot>
 	<tbody>
 		<tr class="eol">
 			<td>TYPO3 3.6 CMS</td>
-			<td>576</td>
-			<td>0.16%</td>
+			<td>469</td>
+			<td>0.15%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 3.7 CMS</td>
-			<td>1,830</td>
-			<td>0.52%</td>
+			<td>1,622</td>
+			<td>0.51%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 3.8 CMS</td>
-			<td>2,859</td>
-			<td>0.81%</td>
+			<td>2,357</td>
+			<td>0.75%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.0 CMS</td>
-			<td>5,202</td>
-			<td>1.42%</td>
+			<td>4,283</td>
+			<td>1.58%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.1 CMS</td>
-			<td>12,671</td>
-			<td>3.60%</td>
+			<td>10,298</td>
+			<td>3.26%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.2 CMS</td>
-			<td>27,667</td>
-			<td>7.86%</td>
+			<td>22,563</td>
+			<td>7.13%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.3 CMS</td>
-			<td>12,158</td>
-			<td>3.46%</td>
+			<td>9,917</td>
+			<td>3.14%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.4 CMS</td>
-			<td>25,268</td>
-			<td>7.18%</td>
+			<td>20,697</td>
+			<td>6.54%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.5 CMS (previously <abbr title="long term support">LTS</abbr>)</td>
-			<td>155,709</td>
-			<td>44.25%</td>
+			<td>130,393</td>
+			<td>41.22%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.6 CMS</td>
-			<td>13,295</td>
-			<td>3.78%</td>
+			<td>10,998</td>
+			<td>3.48%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.7 CMS</td>
-			<td>46,338</td>
-			<td>13.17%</td>
+			<td>39,793</td>
+			<td>12.58%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 6.0 CMS</td>
-			<td>6,273</td>
-			<td>1.78%</td>
+			<td>5,385</td>
+			<td>1.70%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 6.1 CMS</td>
-			<td>20,092</td>
-			<td>5.71%</td>
+			<td>18,132</td>
+			<td>5.73%</td>
 		</tr>
 		<tr class="supported">
 			<td>TYPO3 6.2 CMS (<abbr title="long term support">LTS</abbr>)</td>
-			<td>21,348</td>
-			<td>6.07%</td>
+			<td>34,674</td>
+			<td>10.96%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 7.0 CMS</td>
-			<td>142</td>
+			<td>122</td>
 			<td>0.04%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 7.1 CMS</td>
-			<td>4</td>
-			<td>0.00%</td>
+			<td>40</td>
+			<td>0.01%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 7.2 CMS</td>
-			<td>1</td>
+			<td>17</td>
+			<td>0.01%</td>
+		</tr>
+		<tr class="eol">
+			<td>TYPO3 7.3 CMS</td>
+			<td>7</td>
 			<td>0.00%</td>
 		</tr>
 		<tr class="supported">
 			<td>TYPO3 7.6 CMS (<abbr title="long term support">LTS</abbr>)</td>
-			<td>232</td>
-			<td>0.07%</td>
+			<td>2060</td>
+			<td>0.65%</td>
+		</tr>
+		<tr class="eol">
+			<td>TYPO3 8.1 CMS</td>
+			<td>2</td>
+			<td>0.00%</td>
+		</tr>
+		<tr class="eol">
+			<td>TYPO3 8.2 CMS</td>
+			<td>2</td>
+			<td>0.00%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 8.3 CMS</td>
-			<td>220</td>
-			<td>0.06%</td>
+			<td>2298</td>
+			<td>0.73%</td>
 		</tr>
 		<tr class="supported">
 			<td>TYPO3 8.4 CMS</td>
-			<td>6</td>
-			<td>0.00%</td>
+			<td>175</td>
+			<td>0.06%</td>
 		</tr>
 	</tbody>
 </table>
+<a href="https://flattr.com/submit/auto?fid=4z3gvx&url=http%3A%2F%2Ft3census.info" target="_blank"><img src="http://button.flattr.com/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0"></a>
 <p>
 	<img src="https://docs.google.com/spreadsheet/oimg?key=0Artbs8oS4Ip4dFZQbGRLb1NSLUtaNVNhLW94MllRbEE&oid=2&zx=dqygzq8he41b">
 	<img src="https://docs.google.com/spreadsheet/oimg?key=0Artbs8oS4Ip4dFZQbGRLb1NSLUtaNVNhLW94MllRbEE&oid=4&zx=lrez8mgjcdou">
@@ -234,7 +250,7 @@
 
 <h2>history</h2>
 <ul type="disc">
-	<li>Dec 05, 2016 - identified ~350,000 TYPO3 CMS installations ("oldest" datasample: Jan 27, 2014)</li>
+	<li>Dec 05, 2016 - identified ~316,000 TYPO3 CMS installations ("oldest" datasample: Jan 7, 2014)</li>
 	<li>Dec 03, 2014 - identified ~355,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013)</li>
 	<li>May 11, 2014 - identified ~300,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013)</li>
 	<li>Apr 01, 2014 - identified ~200,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013)</li>
